feat(tokens): edit and delete tokens
